--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="nav">
             <a class="about" href="index.html">About</a>
             <a class="portfolio" href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contacts</a>
+            <a class="contact" href="contact.html">Contacts</a>
             </nav>
     </div>
 
